--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	
 </div>	<div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
-    <h1 class="display-1 mb-4">GENERAL</h1>
+    <h1 class="display-1 mb-4">GENERAL RELATIVITY</h1>
   </div>
   <div class="rectangle-1"></div>
   <div class="rectangle-2"></div>
