--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	
 </div>	<div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
-    <h1 class="display-1 mb-4">GENERAL RELATIVITY</h1>
+    <h1 class="display-1 mb-4">GENERAL<br>RELATIVITY</h1>
   </div>
   <div class="rectangle-1"></div>
   <div class="rectangle-2"></div>
@@ -595,7 +595,6 @@
          		
          	</div>
          	<div class="col-lg-4 col-md-12 d-flex align-items-center">
-         		<p class="mx-auto text-center mb-0">&copy; 2019 Roxy. Design by <a href="https://gettemplates.co" target="_blank">GetTemplates</a>.</p>
          	</div>
            
             <div class="col-lg-4 col-md-12">
