Updated text content

--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body data-spy="scroll" data-target="#navbar" class="static-layout">
 	<nav id="header-navbar" class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center text-white" href="/">
-            <h3 class="font-weight-bolder mb-0">GENERAL RELATIVITY</h3>
+            <h3 class="font-weight-bolder mb-0">TEAM 9371</h3>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header" aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
             <span class="lnr lnr-menu"></span>
@@ -94,8 +97,9 @@
 
 		</form>
 	</div>
-	
-</div>	<div class="jumbotron d-flex align-items-center">
+</div>	
+
+<div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
     <h1 class="display-1 mb-4">GENERAL</h1>
     <h1 class="display-1 mb-4 header-2">RELATIVITY</h1>
@@ -121,6 +125,38 @@
   </div>
 </div>
 
+<section
+  class="overflow-hidden bg-gray-50 sm:grid sm:grid-cols-2 sm:items-center"
+>
+  <div class="p-8 md:p-12 lg:px-16 lg:py-24">
+    <div class="mx-auto max-w-xl text-center sm:text-left">
+      <h2 class="text-2xl font-bold text-gray-900 md:text-3xl">
+        We are Team No. 9371
+      </h2>
+
+      <p class="hidden text-gray-500 md:mt-4 md:block">
+        We're an NYC-based FTC Robotics team associated with The Dalton School. 
+        We compete in NYC and abroad, and are excited for the 2022-2023 season!
+      </p>
+
+      <div class="mt-4 md:mt-8">
+        <a
+          href="https://www.dalton.org/"
+          class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+        >
+          Our School
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <img
+    alt="Violin"
+    src="img/robot.jpg"
+    class="h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-tl-[30px] md:h-[calc(100%_-_4rem)] md:rounded-tl-[60px]"
+  />
+</section>
+
 <footer class="mastfoot my-3">
     <div class="inner container">
          <div class="row">
@@ -133,7 +169,6 @@
             <div class="col-lg-4 col-md-12">
             	<nav class="nav nav-mastfoot justify-content-center">
 	                <a class="nav-link" href="#">
-	                	<i class="fab fa-instagram"></i>
 	                </a>
 	            </nav>
             </div>
