--- a/index.html
+++ b/index.html
@@ -151,13 +151,126 @@
   </div>
 
   <img
-    alt="Violin"
+    alt="Robot"
     src="img/robot.jpg"
     class="h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-tl-[30px] md:h-[calc(100%_-_4rem)] md:rounded-tl-[60px]"
   />
 </section>
 
-<footer class="mastfoot my-3">
+<section class="bg-gray-900 text-white">
+    <div class="max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
+      <div class="max-w-xl">
+        <h2 class="text-3xl font-bold sm:text-4xl">About Us</h2>
+      </div>
+  
+      <div
+        class="mt-8 grid grid-cols-1 gap-8 md:mt-16 md:grid-cols-2 md:gap-12 lg:grid-cols-3"
+      >
+        <div class="flex items-start">
+          <span class="flex-shrink-0 rounded-lg bg-gray-800 p-4">
+            <svg
+              class="h-5 w-5"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+              <path
+                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+              ></path>
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+              ></path>
+            </svg>
+          </span>
+  
+          <div class="ml-4">
+            <h2 class="text-lg font-bold">Our Chassis</h2>
+  
+            <p class="mt-1 text-sm text-gray-300">
+                We built a custom omni chassis to optimize speed, with multiple levels for attachments.  
+                We used delrin so we could easily change and adjust our mechanics such as spinner and draw slides, 
+                while the final level is a custom, aluminum plate that we CNC-milled. 
+                The aluminum gives extra strength and stability to the base, which is important for any fast moving robot. 
+            </p>
+          </div>
+        </div>
+  
+        <div class="flex items-start">
+          <span class="flex-shrink-0 rounded-lg bg-gray-800 p-4">
+            <svg
+              class="h-5 w-5"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+              <path
+                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+              ></path>
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+              ></path>
+            </svg>
+          </span>
+  
+          <div class="ml-4">
+            <h2 class="text-lg font-bold">Our Intake</h2>
+  
+            <p class="mt-1 text-sm text-gray-300">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+              cumque tempore est ab possimus quisquam reiciendis tempora animi!
+              Quaerat, saepe?
+            </p>
+          </div>
+        </div>
+  
+        <div class="flex items-start">
+          <span class="flex-shrink-0 rounded-lg bg-gray-800 p-4">
+            <svg
+              class="h-5 w-5"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+              <path
+                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+              ></path>
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+              ></path>
+            </svg>
+          </span>
+  
+          <div class="ml-4">
+            <h2 class="text-lg font-bold">Our Software</h2>
+  
+            <p class="mt-1 text-sm text-gray-300">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+              cumque tempore est ab possimus quisquam reiciendis tempora animi!
+              Quaerat, saepe?
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+<footer class="mastfoot bg-gray-50">
     <div class="inner container">
          <div class="row">
          	<div class="col-lg-4 col-md-12 d-flex align-items-center">
