--- a/index.html
+++ b/index.html
@@ -226,9 +226,10 @@
             <h2 class="text-lg font-bold">Our Intake</h2>
   
             <p class="mt-1 text-sm text-gray-300">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
-              cumque tempore est ab possimus quisquam reiciendis tempora animi!
-              Quaerat, saepe?
+              Our intake utilizes a claw that we have iterated several times to intake cones in 
+              multiple orientations. This claw uses grip tape to provide enough friction between the cone and claw.
+              To maneuver our claw, we utilize drawer slides allowing us to score on the highest junctions. The slides
+              connect to our claw through a servo that functions as a "wrist mechanism" that was developed with generative design.
             </p>
           </div>
         </div>
@@ -259,9 +260,11 @@
             <h2 class="text-lg font-bold">Our Software</h2>
   
             <p class="mt-1 text-sm text-gray-300">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
-              cumque tempore est ab possimus quisquam reiciendis tempora animi!
-              Quaerat, saepe?
+              Our software team has focused on making our code modular to prevent unneeded repetition. Each mechanism has 
+              a unique class that are then grouped into a larger hardware class, meaning tele-op and autonomous code can use
+              any mechanism easily. Our auto program uses a camera to detect the color of our sleeve and then move into the
+              correct parking space. Our tele-op specifically allows the driver to move relative to the robot or relative to the driver,
+              allowing for easier driver control on the field. 
             </p>
           </div>
         </div>
