--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </div>	
 
 <div class="jumbotron d-flex align-items-center">
-  <div class="container text-center">
+  <div class="jumbotron-text container text-center">
     <h1 class="display-1 mb-4">GENERAL</h1>
     <h1 class="display-1 mb-4 header-2">RELATIVITY</h1>
   </div>
