--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <a class="navbar-brand d-flex align-items-center text-white" href="/">
             <!-- <h3 class="font-weight-bolder mb-0">TEAM 9371</h3> -->
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header" aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header" aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
             <span class="lnr lnr-menu"></span>
-        </button>
+        </button> -->
         <div class="collapse navbar-collapse" id="navbar-nav-header">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -81,7 +81,8 @@
 		</p>
 		<p>info@yourdomain.com</p>
 	</div>
-</div><div id="side-search" class="sidenav">
+</div>
+<div id="side-search" class="sidenav">
 	<a href="javascript:void(0)" id="side-search-close">&times;</a>
 	<div class="sidenav-content">
 		<form action="">
