Co-authored-by: jai-kapoor <jai-kapoor@users.noreply.github.com> Co-authored-by: generalrelativity9371 <generalrelativity9371@users.noreply.github.com>

--- a/outreach.html
+++ b/outreach.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>General Relativity</title>
+    <title>Outreach</title>
     <meta name="description" content="GR">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -102,8 +102,7 @@
 
 <div class="jumbotron d-flex align-items-center">
   <div class="jumbotron-text container text-center">
-    <h1 class="display-1 mb-4">GENERAL</h1>
-    <h1 class="display-1 mb-4 header-2">RELATIVITY</h1>
+    <h1 class="display-1 mb-4">OUTREACH</h1>
   </div>
   <div class="rectangle-1"></div>
   <div class="rectangle-2"></div>
@@ -142,29 +141,10 @@
 
       <div class="mt-4 md:mt-8">
         <a
-          href="https://www.dalton.org/programs/high-school/curriculum/notable-programs/engineering"
+          href="index.html"
           class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
         >
-          Our School
-        </a>
-      </div>
-      <div style = "position:relative; left:0px; top:20px;">
-        <div class="new_button">
-          <a
-            href="team.html"
-            class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
-          >
-            Our Team
-          </a>
-        </div>
-     </div>
-     <div style = "position:relative; left:0px; top:40px;">
-      <div class="new1_button">
-        <a
-          href="outreach.html"
-          class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
-        >
-          Outreach Projects
+          Back
         </a>
       </div>
    </div>
@@ -175,7 +155,7 @@
 
   <img
     alt="Robot"
-    src="img/robot.jpg"
+    src="img/outreach_photo.jpg"
     class="h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-tl-[30px] md:h-[calc(100%_-_4rem)] md:rounded-tl-[60px]"
   />
 </section>
