--- a/3d.html
+++ b/3d.html
@@ -8,6 +8,59 @@
 		</style>
 	</head>
 	<body>
+		<nav id="header-navbar" class="navbar navbar-expand-lg py-4">
+			<div class="header">
+				<div style = "position:relative; left:200px; top:-152px;">
+					<div class="new2_button">
+					<a
+						href="index.html"
+						class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+					>
+						Home
+					</a>
+					</div>
+				</div>
+				<div style = "position:relative; left:0px; top:-100px;">
+					<div class="mt-4 md:mt-8">
+						<a
+						href="https://www.dalton.org/programs/high-school/curriculum/notable-programs/engineering"
+						class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+						>
+						Our School
+						</a>
+					</div>
+				</div>
+				<div style = "position:relative; left:200px; top:-152px;">
+					<div class="new_button">
+					<a
+						href="team.html"
+						class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+					>
+						Our Team
+					</a>
+					</div>
+				</div>
+				<div style = "position:relative; left:400px; top:-204px;">
+				<div class="new1_button">
+					<a
+					href="outreach.html"
+					class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+					>
+					Outreach Projects
+					</a>
+				</div>
+				<div style = "position:relative; left:250px; top:-52px;">
+					<div class="new2_button">
+					<a
+						href="3d.html"
+						class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+					>
+						Robot
+					</a>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script src="js/three.js"></script>
 		<script>
 			const scene = new THREE.Scene();
