--- a/index.html
+++ b/index.html
@@ -33,6 +33,57 @@
 </head>
 <body data-spy="scroll" data-target="#navbar" class="static-layout">
 	<nav id="header-navbar" class="navbar navbar-expand-lg py-4">
+    <div class="header">
+      <div style = "position:relative; left:10px; top:0px;">
+        <div class="new2_button">
+        <a
+          href="index.html"
+          class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+        >
+          Home
+        </a>
+        </div>
+      </div>
+      <div style = "position:relative; left:165px; top:-76px;">
+        <div class="mt-4 md:mt-8">
+          <a
+            href="https://www.dalton.org/programs/high-school/curriculum/notable-programs/engineering"
+            class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+          >
+            Our School
+          </a>
+        </div>
+      </div>
+      <div style = "position:relative; left:360px; top:-128px;">
+        <div class="new_button">
+          <a
+            href="team.html"
+            class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+          >
+            Our Team
+          </a>
+        </div>
+     </div>
+     <div style = "position:relative; left:550px; top:-180px;">
+      <div class="new1_button">
+        <a
+          href="outreach.html"
+          class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+        >
+          Outreach Projects
+        </a>
+      </div>
+      <div style = "position:relative; left:235px; top:-52px;">
+        <div class="new2_button">
+          <a
+            href="3d.html"
+            class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
+          >
+            Robot
+          </a>
+        </div>
+      </div>
+    </div>
     <div class="container">
         <a class="navbar-brand d-flex align-items-center text-white" href="/">
             <!-- <h3 class="font-weight-bolder mb-0">TEAM 9371</h3> -->
@@ -143,46 +194,7 @@
         We're an NYC-based FTC Robotics team associated with The Dalton School. 
         We compete in NYC and abroad, and are excited for the 2022-2023 season!
       </p>
-
-      <div class="mt-4 md:mt-8">
-        <a
-          href="https://www.dalton.org/programs/high-school/curriculum/notable-programs/engineering"
-          class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
-        >
-          Our School
-        </a>
-      </div>
-      <div style = "position:relative; left:0px; top:20px;">
-        <div class="new_button">
-          <a
-            href="team.html"
-            class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
-          >
-            Our Team
-          </a>
-        </div>
-     </div>
-     <div style = "position:relative; left:0px; top:40px;">
-      <div class="new1_button">
-        <a
-          href="outreach.html"
-          class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
-        >
-          Outreach Projects
-        </a>
-      </div>
    </div>
-
-
-   <div style = "position:relative; left:0px; top:60px;">
-    <div class="new2_button">
-      <a
-        href="3d.html"
-        class="home-btn inline-block rounded px-12 py-3 text-sm font-medium text-white transition focus:outline-none focus:ring focus:ring-yellow-400"
-      >
-        Robot
-      </a>
-    </div>
  </div>
 
     </div>
