--- a/team.html
+++ b/team.html
@@ -36,7 +36,7 @@
 
 
 <body>
-    <h1 class="mr-auto ml-auto w-52 text-4xl pt-6">Our Team</h1>
+    <h1 class="mr-auto ml-auto w-52 text-4xl pt-6 font-bold">Our Team</h1>
 
     <div class="grid gap-4 grid-cols-4 auto-cols-max p-6">
         <!-- Arjun -->
