Updated team page and 3D model

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li>
             <a
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="/about.html"
+              href="./about.html"
             >
               About
             </a>
@@ -65,7 +65,7 @@
           <li>
             <a
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="/team.html"
+              href="./team.html"
             >
               Team
             </a>
@@ -74,7 +74,7 @@
           <li>
             <a
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="/3d.html"
+              href="./3d.html"
             >
               Robot
             </a>
@@ -83,7 +83,7 @@
           <li>
             <a
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="/contact.html"
+              href="./contact.html"
             >
               Contact
             </a>
