--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 </head>
 
-<header aria-label="Site Header" class="bg-black text-2xl">
+<header aria-label="Site Header" class="site-nav text-2xl">
   <div
     class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8"
   >
