Header adjustments to team.html and style.min.css

--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
                     class="translate-y-8 transform opacity-0 transition-all group-hover:translate-y-0 group-hover:opacity-100"
                     >
                     <p class="text-sm text-white absolute bottom-px">
-                        My favorite movie is Wall-E.  
+                        I paused my game to be here.  
                     </p>
                     </div>
                 </div>
