--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div
     class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8"
   >
-    <a class="block text-teal-600 dark:text-teal-300" href="/">
+    <a class href="/">
       <span class="sr-only">Home</span>
       <span style="font-family: 'VisbyBold'">9371</span>
     </a>
@@ -53,14 +53,6 @@
     <div class="flex flex-1 items-center justify-end md:justify-between">
       <nav aria-label="Site Nav" class="hidden md:block">
         <ul class="flex items-center gap-6 text-sm">
-          <li>
-            <a
-              class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="./about.html"
-            >
-              About
-            </a>
-          </li>
 
           <li>
             <a
@@ -80,14 +72,7 @@
             </a>
           </li>
 
-          <li>
-            <a
-              class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="./contact.html"
-            >
-              Contact
-            </a>
-          </li>
+      
 
           <!-- <li>
             <a
