--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
 	<script src="vendor/lightcase/lightcase.js"></script>
 	<script src="vendor/waypoints/waypoint.min.js"></script>
 	 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 	 
 	<!-- Main JS -->
 	<script src="js/app.min.js "></script>
