--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li>
             <a
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="./about.html"
+              href="https://www.dalton.org/programs/high-school/curriculum/notable-programs/engineering"
             >
               About
             </a>
