--- a/3d.html
+++ b/3d.html
@@ -12,10 +12,9 @@
 	 
 <!-- 	<script type="text/javascript" src = "PyramidsWireframe.js"></script> -->
 <!-- 	<script src="index.js"></script> -->
-    <h1> 3D Wireframe using p5.js </h1>
+    <h1> Robot 3D Model in Fusion </h1>
 	  <iframe src="https://dalton57.autodesk360.com/shares/public/SH9285eQTcf875d3c5395d71507a9d28333e?mode=embed" 
 		  width="1024" height="768" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-	  <p> Robot 3D Model </p>
 	  <a href="index.html"> Back </a>
   </body>
 </html>
