--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
             </a>
           </li>
 
-          <!-- <li>
+          <li>
             <a
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="/"
+              href="./Livestream.html"
             >
-              Projects
+              Livestream
             </a>
           </li>
 
