--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <li>
             <a
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="./Livestream.html"
+              href="./livestream.html"
             >
               Livestream
             </a>
@@ -105,7 +105,16 @@
             >
               Blog
             </a>
-          </li> -->
+          </li>
+		
+          <li>
+            <a
+              class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+              href="./livestream.html"
+            >
+              Livestream
+            </a>
+          </li>
         </ul>
       </nav>
 
