--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
             <a href="#" class="group relative block bg-black h-96 w-72">
                 <img
                 alt="Developer"
-                src="img/team/atticus.jpg"
+                src="img/team/atticus.JPG"
                 class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
                 />
             
