--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
           <li>
             <a
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-              href="/"
+              href="./initiatives.html"
             >
-              Blog
+              Initiatives
             </a>
           </li>
 		
