--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
               Livestream
             </a>
           </li>
+	  <li>
+            <a
+              class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+            >
+              generalrelativity9371.github.io
+            </a>
+          </li>
         </ul>
       </nav>
 
