--- a/initiatives.html
+++ b/initiatives.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <h1 class="mr-auto ml-auto w-52 text-4xl pt-6 font-bold">Our Initiatives</h1>
+    <h1 class="mr-auto ml-auto w-52 text-4xl pt-6 font-bold">Initiatives</h1>
 
     <div class="grid gap-4 grid-cols-4 auto-cols-max p-6">
         <!-- FLL -->
