--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </li>
 	  <li>
             <a
-              class="block text-teal-600 dark:text-teal-300"
+              class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
             >
               generalrelativity9371.github.io
             </a>
