Added header to team page

--- a/team.html
+++ b/team.html
@@ -34,10 +34,107 @@
 
 </head>
 
-<body>
-    <h1 class="mr-auto ml-auto w-52 text-4xl pt-6 font-bold">Our Team</h1>
+<header aria-label="Site Header" class="site-nav text-2xl bg-black">
+    <div
+      class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8"
+    >
+      <a class="block text-teal-600 dark:text-teal-300" href="/">
+        <span class="sr-only">Home</span>
+        <span style="font-family: 'VisbyBold'">9371</span>
+      </a>
+  
+      <div class="flex flex-1 items-center justify-end md:justify-between">
+        <nav aria-label="Site Nav" class="hidden md:block">
+          <ul class="flex items-center gap-6 text-sm">
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="https://www.dalton.org/programs/high-school/curriculum/notable-programs/engineering"
+              >
+                About
+              </a>
+            </li>
+  
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./team.html"
+              >
+                Team
+              </a>
+            </li>
+  
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./3d.html"
+              >
+                Robot
+              </a>
+            </li>
+  
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="https://instagram.com/generalrelativity9371?igshid=YmMyMTA2M2Y="
+              >
+                Contact
+              </a>
+            </li>
+  
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./initiatives.html"
+              >
+                Initiatives
+              </a>
+            </li>
+          
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./livestream.html"
+              >
+                Livestream
+              </a>
+            </li>
+        <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+              >
+                generalrelativity9371.github.io
+              </a>
+            </li>
+          </ul>
+        </nav>
+  
+          <button
+            class="block rounded bg-gray-100 p-2.5 text-gray-600 transition hover:text-gray-600/75 dark:bg-gray-800 dark:text-white dark:hover:text-white/75 md:hidden"
+          >
+            <span class="sr-only">Toggle menu</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M4 6h16M4 12h16M4 18h16"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+</header>
 
-    <div class="grid gap-4 grid-cols-4 auto-cols-max p-6">
+<body>
+    <div class="grid gap-4 grid-cols-4 auto-cols-max p-20">
         <!-- Arjun -->
         <div>
             <a href="#" class="group relative block bg-black h-96 w-72">
