--- a/initiatives.html
+++ b/initiatives.html
@@ -49,7 +49,7 @@
             
                 <div class="relative p-8">
                 <p class="text-sm font-medium uppercase tracking-widest text-pink-500">
-                    Team Member
+                    Initiative
                 </p>
             
                 <p class="text-2xl font-bold text-white">Arjun Kalbag</p>
