--- a/initiatives.html
+++ b/initiatives.html
@@ -129,7 +129,14 @@ Every Thursday members of our team will take two hours to go and help work with 
                     class="translate-y-8 transform opacity-0 transition-all group-hover:translate-y-0 group-hover:opacity-100"
                     >
                     <p class="text-sm text-white absolute relative p-0">
-                        I've played tennis for 10 years.
+Project Spark: 
+We as General Relativity have established Project Spark, our effort to mentor our schools’s middle school robotics teams to guide and assist them throughout their robotics season. 8 out of 12 members of our team were on that team when we were in middle school so we thought that it would be a good idea to give back to the team now that we have different skills to offer. Our school offers three different middle school robotics teams. Robo Soccer, FLL and Vex robotics. 
+
+The 7th and 8th grade team does VEX robotics. We hope that by mentoring their team we not only help their VEX journey this year but also encourage them to stick with robotics as they enter high school and join our FTC teams. We work with them whenever we can. 
+
+On Wednesday two of our team members joined the middle school Robo soccer team. The robo soccer team uses arduinos to program robots to play soccer. Our team members help mentor the 7th and 8th graders on this team. We mostly mentor with our software team, therefore we help them the most we code. 
+
+Every Thursday members of our team will take two hours to go and help work with our school’s 6th grade FLL robotics teams, the Lightning Potatoes. It's a great learning experience to work with the 6th graders and help to teach them about more advanced engineering methods that are similar to the ones we use in highschool robotics. We have been able to help them with mechanical attachments and the creation of a line follower. It has been great to see them interact with the first world as they prepare for their first competitions.
                     </p>
                     </div>
                 </div>
