--- a/index.html
+++ b/index.html
@@ -186,12 +186,18 @@
 
     </div>
   </div>
-
-  <img
-    alt="Robot"
-    src="img/robot.jpg"
-    class="h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-tl-[30px] md:h-[calc(100%_-_4rem)] md:rounded-tl-[60px]"
-  />
+  <div class="img">
+	  <img
+	    alt="Robot"
+	    src="img/robot.jpg"
+	    class="h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-tl-[30px] md:h-[calc(100%_-_4rem)] md:rounded-tl-[60px]"
+	  />
+	  <img
+	    alt="New Robot"
+	    src="img/obj_triangle.png"
+	    class="hover_img h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-tl-[30px] md:h-[calc(100%_-_4rem)] md:rounded-tl-[60px]"
+	  />
+  </div>
 </section>
 
 
