--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <img
     alt="Robot"
     src="img/robot.jpg"
-    class="h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-tl-[30px] md:h-[calc(100%_-_4rem)] md:rounded-tl-[60px]"
+    class="h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-tl-[30px] md:h-[calc(100%_-_4rem)] md:rounded-tl-[60px] border-radius: 50%"
   />
   </div>
 </section>
