--- a/initiatives.html
+++ b/initiatives.html
@@ -78,7 +78,7 @@ Every Thursday members of our team will take two hours to go and help work with 
             <a href="#" class="group relative block bg-black h-120 w-90">
                 <img
                 alt="Developer"
-                src="img/team/atticus.JPG"
+                src="img/RoboSoccer.jpg"
                 class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
                 />
             
