--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<header aria-label="Site Header" class="site-nav text-2xl bg-black">
+<header aria-label="Site Header" class="site-nav team-nav text-2xl bg-black">
     <div
       class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8"
     >
@@ -475,7 +475,7 @@
 
     </div>
       
-
+    <script src="js/app.min.js "></script>
 </body>
 
 
