--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
               href="https://instagram.com/generalrelativity9371?igshid=YmMyMTA2M2Y="
             >
-              Contact
+              Contact Us
             </a>
           </li>
 
