--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   </div>
   <img
     alt="Robot"
-    src="img/robot.jpg"
+    src="img/Redo_MB v4 2.png"
     class="h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-tl-[30px] md:h-[calc(100%_-_4rem)] md:rounded-tl-[60px]"
   />
   </div>
@@ -228,7 +228,7 @@
             <h2 class="text-lg font-bold">Our Chassis</h2>
   
             <p class="mt-1 text-sm text-gray-300">
-                We built a custom omni chassis to optimize speed, with multiple levels for attachments.  
+                We built a custom mecanum chassis to optimize speed, with multiple levels for attachments.  
                 We used delrin so we could easily change and adjust our mechanics such as spinner and draw slides, 
                 while the final level is a custom, aluminum plate that we CNC-milled. 
                 The aluminum gives extra strength and stability to the base, which is important for any fast moving robot. 
