--- a/3d.html
+++ b/3d.html
@@ -15,6 +15,10 @@
     <h1> Robot 3D Model in Fusion </h1>
 	  <p align="center"><iframe src="https://dalton57.autodesk360.com/shares/public/SH9285eQTcf875d3c5395d71507a9d28333e?mode=embed" 
 		  width="1024" height="768" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
+	  
+	  <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
+	  <div class="commonninja_component pid-84df0b9e-0a24-49b3-9732-d89a7dd10f6b"></div>
 	  <a href="index.html"> Back </a>
+	  
   </body>
 </html>
